<resources>
    <string name="app_name">Terremotos</string>
    <string name="btn_filtrar">filtrar</string>
    <string name="btn_consultar">Consultar</string>
    <string name="tv_fecha_hora">Fecha y hora:</string>
    <string name="tv_nombre_Terremoto">Nombre del terremoto:</string>
    <string name="tv_magnitud">Magnitud:</string>
    <string name="tv_coordenadas_epi">Coordenadas epicentro:</string>
    <string name="tv_lugar">Lugar:</string>
    <string name="tv_num_muertos">Cantidad de muertos:</string>
    <string name="tv_mes">Mes:</string>
    <string name="tv_anio">Año:</string>
    <string name="tv_pais">País:</string>
    <string name="btn_aplicar_filtro">Aceptar</string>
    <string name="title_dialog_filtro">Filtro</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="no_anio">Año incorrecto</string>
    <string name="no_filtro">Datos no encontrados para ese filtro</string>
    <string name="hint_anio">Introduce año</string>
</resources>