<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margen_app">


    <LinearLayout
        android:id="@+id/llMes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_mes"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spMes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/meses"
            android:spinnerMode="dropdown"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAnio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llMes"
        android:layout_marginTop="@dimen/margen_app">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_anio"
            android:textStyle="bold"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/etAnio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1"
            android:hint="@string/hint_anio"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llAnio"
        android:layout_marginTop="@dimen/margen_app"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_pais"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>