<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margen_app">


    <LinearLayout
        android:id="@+id/llDatos1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_fecha_hora"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvFechaHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDatos2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llDatos1"
        android:layout_marginTop="@dimen/margen_app">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombre_Terremoto"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvNombreTerremoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDatos3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llDatos2"
        android:layout_marginTop="@dimen/margen_app">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_magnitud"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvMagnitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llDatos4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llDatos3"
        android:layout_marginTop="@dimen/margen_app">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_coordenadas_epi"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvCoordenadasEpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDatos5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llDatos4"
        android:layout_marginTop="@dimen/margen_app">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_lugar"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvLugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="12"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDatos6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llDatos5"
        android:layout_marginTop="@dimen/margen_app">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_num_muertos"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvNumMuertos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/llDatos6"
        android:background="@color/black"
        android:layout_marginTop="@dimen/margen_app"/>

</RelativeLayout>